--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "spatie/laravel-sluggable": "^2.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -57,6 +58,14 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "init-dev": [
+            "php artisan key:generate",
+            "php artisan migrate:fresh",
+            "php artisan cache:clear",
+            "php artisan config:clear",
+            "php artisan view:clear",
+            "php artisan db:seed"
         ]
     }
 }
